restored last version

--- a/REEF_fast-V2/Run_REEF.ipynb
+++ b/REEF_fast-V2/Run_REEF.ipynb
@@ -8,9 +8,8 @@
    "outputs": [],
    "source": [
     "#Charger le repertoire des scripts\n",
-    "import os\n",
-    "import sys\n",
-    "sys.path.append(os.path.abspath('./Library'))\n",
+    "# import sys\n",
+    "# sys.path.append(\"C:/Users/svissiere/Documents/RepertoireDeTravail/xsREEF\") \n",
     "import numpy as np\n",
     "from matplotlib.pyplot import close, show\n",
     "import matplotlib.pyplot as plt\n",
@@ -23,6 +22,7 @@
     "from datetime import datetime as dtime\n",
     "from os import path\n",
     "import xsimlab as xs\n",
+    "# to download xsimlab : pip install xarray-simlab\n"
    ]
   },
   {
@@ -54,17 +54,16 @@
     "dico = Dicos()\n",
     "\n",
     "# The first relevant parameters to test are : vertical__u, construct__Gm, hfactor__Dbar, eros__Ev.\n",
-    "# Remove the platform for the first tests I think, but if you prefer with one go ahead ! When you better see how the 4 \n",
-    "# parameters works, you can try another one, and bit by bit explore everything. If you want, at the end you can try \n",
-    "# to test also \"hfactor__how\". But do not change the values of the other parameters in the \"no need to test\" part.\n",
+    "# Remove the platform for the first tests I think, but if you prefer with one go ahead ! When you see better how the 4 \n",
+    "# parameters works, you can try another one, and bit by bit explore everything. If you want, at the end you can try also \n",
+    "# to test \"hfactor__how\". But do not change the values of the other parameters in the \"no need to test\" part.\n",
     "\n",
-    "#SL = 'Bintanja2008-1000k.dat'\n",
-    "#SL = 'Waelbroeck2002-137ky.dat'\n",
-    "# SL = 'Waelbroeck2002b.dat'\n",
+    "#SL = 'Bintanja2008-1000k'\n",
+    "#SL = 'Waelbroeck2002-137ky'\n",
+    "# SL = 'Waelbroeck2002b'\n",
     "SL = 'Holocene-SL.dat'\n",
     "#SL = 'Grant2014-1000ky.dat'\n",
     "#SL = 'Bintanja2005.dat'\n",
-    "\n",
     "tmax = nlines(dico.path_SLcurves+SL)*1e3\n",
     "print(tmax)\n",
     "\n",
