added compare erosion rates in construct setting at beginning

--- a/REEF/Run_REEF.ipynb
+++ b/REEF/Run_REEF.ipynb
@@ -436,6 +436,65 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ab5154d1-c4a0-41c2-adf5-2f742faf278c",
+   "metadata": {},
+   "source": [
+    "## Different erosion rates \n",
+    "### Low erosion rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ac6f088-1634-4146-bb19-773ff7fc3c59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the variables\n",
+    "REEF.reef_params(SL = 'Waelbroeck2002-137ky.dat',\n",
+    "                U = 0.6e-3,\n",
+    "                slop = 6e-2,\n",
+    "                Gm = 9e-3,\n",
+    "                Ev = 60e-3)\n",
+    "\n",
+    "# Run the model\n",
+    "REEF.run(dt = 200, save = True)\n",
+    "\n",
+    "# Plot the output\n",
+    "REEF.plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c92ae93-5c25-4ab0-a592-e8371c991c59",
+   "metadata": {},
+   "source": [
+    "### High erosion rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5afedd51-ad70-482d-82e1-da83dc068d1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the variables\n",
+    "REEF.reef_params(SL = 'Waelbroeck2002-137ky.dat',\n",
+    "                U = 0.6e-3,\n",
+    "                slop = 6e-2,\n",
+    "                Gm = 9e-3,\n",
+    "                Ev = 460e-3)\n",
+    "\n",
+    "# Run the model\n",
+    "REEF.run(dt = 200, save = True)\n",
+    "\n",
+    "# Plot the output\n",
+    "REEF.plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0c8bb016-0da4-4c3d-809c-ce09e88734a8",
    "metadata": {},
    "source": [
